force-app/main/default/objects/PurchasePlanLineItem__c/fields/FixedQuantity__c.field-meta.xml
<CustomField>
    <fullName>FixedQuantity__c</fullName>
    <label>Fixed Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>