force-app/main/default/objects/PurchasePlanLineItem__c/fields/PurchasePlanId__c.field-meta.xml
<CustomField>
    <fullName>PurchasePlanId__c</fullName>
    <label>PurchasePlan</label>
    <referenceTo>PurchasePlan__c</referenceTo>
    <relationshipLabel>Purchase Plan Line Item</relationshipLabel>
    <relationshipName>RFX_LineItem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>