force-app/main/default/objects/PurchasePlanLineItem__c/fields/PurchaseRequestLineItemId__c.field-meta.xml
<CustomField>
    <fullName>PurchaseRequestLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PP Line Item</label>
    <referenceTo>PurchaseRequestLineItem__c</referenceTo>
    <relationshipLabel>Purchase Plan Line Item</relationshipLabel>
    <relationshipName>RFX_LineItem</relationshipName>
    <type>Lookup</type>
</CustomField>