force-app/main/default/objects/PurchasePlanLineItem__c/fields/QutationAmount__c.field-meta.xml
<CustomField>
    <fullName>QutationAmount__c</fullName>
    <formula>QuotationPrice__c * RequestQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quotation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>