force-app/main/default/objects/PurchasePlanLineItem__c/fields/RequestPrice__c.field-meta.xml
<CustomField>
    <fullName>RequestPrice__c</fullName>
    <label>Request Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>