force-app/main/default/objects/PurchasePlanLineItem__c/fields/RequestQuantity__c.field-meta.xml
<CustomField>
    <fullName>RequestQuantity__c</fullName>
    <label>Request Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>