force-app/main/default/objects/PurchasePlanLineItem__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <formula>ProductId__r.Standard__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard</label>
    <type>Text</type>
</CustomField>