force-app/main/default/objects/PurchasePlanLineItem__c/fields/TargetPrice__c.field-meta.xml
<CustomField>
    <fullName>TargetPrice__c</fullName>
    <label>Target Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>